--- a/style.css
+++ b/style.css
@@ -58,10 +58,12 @@ body{
   cursor: pointer;
   transition: all 0.3s ease;
 }
+
 .options button:hover,
 .btn button:hover{
   transform: scale(0.96);
 }
+
 .options button.playerX{
   margin-right: 5px;
 }
@@ -73,4 +75,90 @@ body{
   margin-top: 20px;
   font-size: 18px;
   font-weight: 500;
+}
+
+.select-box .credit a{
+  color: #56baed;
+  text-decoration: none;
+}
+.select-box .credit a:hover{
+  text-decoration: underline;
+}
+
+.play-board{
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0.9);
+}
+.play-board.show{
+  opacity: 1;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scale(1);
+}
+.play-board .details{
+  padding: 7px;
+  border-radius: 5px;
+  background: #fff;
+}
+.play-board .players{
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+}
+.players span{
+  position: relative;
+  z-index: 2;
+  color: #56baed;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 0;
+  width: 100%;
+  text-align: center;
+  cursor: default;
+  user-select: none;
+  transition: all 0.3 ease;
+}
+.players.active span:first-child{
+  color: #fff;
+}
+.players.active span:last-child{
+  color: #56baed;
+}
+.players span:first-child{
+  color: #fff;
+}
+.players .slider{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: #56baed;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.players.active .slider{
+  left: 50%;
+}
+
+.players.active span:first-child{
+  color: #56baed;
+}
+
+.players.active span:nth-child(2){
+  color: #fff;
+}
+
+.players.active .slider{
+  left: 50%;
+}
+
+.play-area{
+  margin-top: 20px;
+}
+
+.play-area section{
+  display: flex;
+  margin-bottom: 1px;
 }
