--- a/style.css
+++ b/style.css
@@ -58,12 +58,10 @@ body{
   cursor: pointer;
   transition: all 0.3s ease;
 }
-
 .options button:hover,
 .btn button:hover{
   transform: scale(0.96);
 }
-
 .options button.playerX{
   margin-right: 5px;
 }
@@ -76,7 +74,6 @@ body{
   font-size: 18px;
   font-weight: 500;
 }
-
 .select-box .credit a{
   color: #56baed;
   text-decoration: none;
@@ -141,24 +138,76 @@ body{
 .players.active .slider{
   left: 50%;
 }
-
 .players.active span:first-child{
   color: #56baed;
 }
-
 .players.active span:nth-child(2){
   color: #fff;
 }
-
 .players.active .slider{
   left: 50%;
 }
-
 .play-area{
   margin-top: 20px;
 }
-
 .play-area section{
   display: flex;
   margin-bottom: 1px;
+}
+.play-area section span{
+  display: block;
+  height: 90px;
+  width: 90px;
+  margin: 2px;
+  color: #56baed;
+  font-size: 40px;
+  line-height: 80px;
+  text-align: center;
+  border-radius: 5px;
+  background: #fff;
+}
+
+.result-box{
+  padding: 25px 20px;
+  border-radius: 5px;
+  max-width: 400px;
+  width: 100%;
+  opacity: 0;
+  text-align: center;
+  background: #fff;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0.9);
+}
+.result-box.show{
+  opacity: 1;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scale(1);
+}
+.result-box .won-text{
+  font-size: 30px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+.result-box .won-text p{
+  font-weight: 600;
+  margin: 0 5px;
+}
+.result-box .btn{
+  width: 100%;
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+}
+.btn button{
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 20px;
+  border: none;
+  background: #56baed;
+  border-radius: 5px;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
