--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 }
 ::selection{
   color: #fff;
-  background:#56baed;
+  background:#6eba54;
 }
 body{
-  background:#56baed;
+  background:#95e0b8;
 }
 .select-box, .play-board, .result-box{
   position: absolute;
@@ -162,7 +162,6 @@ body{
 .play-area{
   margin-top: 20px;
 }
-
 .play-area section{
   display: flex;
   margin-bottom: 1px;
