--- a/style.css
+++ b/style.css
@@ -5,13 +5,17 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
   }
+
   ::selection{
     color: #fff;
     background:#56baed;
   }
-  body{
+
+  body
+  {
     background:#56baed;
   }
+
   .select-box, .play-board, .result-box{
     position: absolute;
     top: 50%;
@@ -19,6 +23,7 @@
     transform: translate(-50%, -50%);
     transition: all 0.3s ease;
   }
+
   .select-box{
     background: #fff;
     padding: 20px 25px 25px;
@@ -26,6 +31,7 @@
     max-width: 400px;
     width: 100%;
   }
+  
   .select-box.hide{
     opacity: 0;
     pointer-events: none;
