--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
   body
   {
-    background:#f7d6ee;
+    background:#12010d;
   }
 
   .select-box, .play-board, .result-box{
@@ -26,8 +26,8 @@
 
   .select-box{
     background: #fff;
-    padding: 20px 25px 25px;
-    border-radius: 5px;
+    padding: 60px 75px 75px;
+    border-radius: 9px;
     max-width: 400px;
     width: 100%;
   }
@@ -57,7 +57,7 @@
     font-weight: 500;
     padding: 10px 0;
     border: none;
-    background: #89d7d2;
+    background: #498a86;
     border-radius: 5px;
     color: #fff;
     outline: none;
